--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/main.css">
-    <title>TO DO</title>
+    <title>Design4Green | green l4ntern</title>
+    <script type="module" src="js/index.js"></script>
 </head>
 
 <body>
-    <script type="javascript" src="js/main.js"></script>
+
 </body>
 
 </html>
