HTML: head complet ajout fichier logo.svgz

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,12 @@
-<html>
+<html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Design4Green | green l4ntern</title>
-    <script type="module" src="js/index.js"></script>
+  <title>Design4Green | green l4ntern</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script type="module" src="js/index.js"></script>
+  <link href="css/main.css" rel="stylesheet" media="screen">
+  <link href="css/main_print.css" rel="stylesheet" media="print">
 </head>
 
 <body>
