--- a/src/index.html
+++ b/src/index.html
@@ -5,23 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Design4Green | green l4ntern</title>
     <link href="css/main.css" />
-    <script type="module" src="./js/index.js"></script>
+    <script src="js/main.js"></script>
 </head>
 
 <body id="body">
-    <div id="main" class="content">
-        <div id="header" class="">
-            <ul id="navbar-menu" class="navbar">
-                <li>Ma consommation</li>
-                <li>Mes documents</li>
-                <li>Comparer mon logement</li>
-                <li>Nos conseils</li>
-            </ul>
-        </div>
-        <div id="content" class="">
-            <!-- TODO:Content -->
-        </div>
-    </div>
+    <header>
+    </header>
+    <nav>
+        <ul id="navbar-menu" class="navbar">
+            <li>Ma consommation</li>
+            <li>Mes documents</li>
+            <li>Comparer mon logement</li>
+            <li>Nos conseils</li>
+        </ul>
+    </nav>
+
+    <main>
+        <!-- TODO:Content -->
+    </main>
 </body>
 
 </html>
