Ecran de login + css

--- a/site/content/_index.html
+++ b/site/content/_index.html
@@ -1,4 +1,15 @@
 ---
 title: Green l4nterne
+alias:
+- /login
 ---
-<h1>Hello, World</h1>
+<h1>Bienvenue sur green lanterne</h1>
+<br>
+<form id="login">
+  <label for="identifiant">Identifiant</label>
+  <input type="text" id="identifiant" name="identifiant">
+  <label for="motdepasse">Mot de passe</label>
+  <input type="password" id="motdepasse" name="motdepasse">
+  <a href="inscription">Créez un compte</a> - <a href="lostpassword">Mot de passe perdu</a>
+  <input type="submit" value="Se connecter">
+</form>
