--- a/site/content/_index.html
+++ b/site/content/_index.html
@@ -5,11 +5,17 @@ alias:
 ---
 <h1>Bienvenue sur green lanterne</h1>
 <br>
-<form id="login">
+
+<div class="divMilieu">
+Pour acceder à votre compte, veuillez vous identifier.
+<br><br>
+<form>
   <label for="identifiant">Identifiant</label>
-  <input type="text" id="identifiant" name="identifiant">
+  <input type="text" class="saisie" id="identifiant" name="identifiant">
   <label for="motdepasse">Mot de passe</label>
-  <input type="password" id="motdepasse" name="motdepasse">
+  <input type="password" class="saisie" id="motdepasse" name="motdepasse">
   <a href="inscription">Créez un compte</a> - <a href="lostpassword">Mot de passe perdu</a>
-  <input type="submit" value="Se connecter">
+  <input type="button" class="buttonVert droite" value="Se connecter">
+
 </form>
+</div>
