--- a/site/content/_index.html
+++ b/site/content/_index.html
@@ -15,7 +15,7 @@ Pour acceder à votre compte, veuillez vous identifier.
   <label for="motdepasse">Mot de passe</label>
   <input type="password" class="saisie" id="motdepasse" name="motdepasse">
   <a href="inscription">Créez un compte</a> - <a href="lostpassword">Mot de passe perdu</a>
-  <input type="button" class="buttonVert droite" value="Se connecter">
+  <input type="button" class="greenButton droite" value="Se connecter">
 
 </form>
 </div>
