--- a/site/content/inscription.html
+++ b/site/content/inscription.html
@@ -37,7 +37,7 @@ title: inscription
         <label for="motdepasse">Confirmer le mot de passe</label>
         <input type="password" class="saisie" id="motdepassebis" name="motdepassebis">
 
-        <input type="button" class="buttonVert droite" value="Suivant" onclick="creationSuivant(1)">
+        <input type="button" class="greenButton droite" value="Suivant" onclick="creationSuivant(1)">
     </form>
 </div>
 
@@ -70,8 +70,8 @@ title: inscription
             <option value="1">Individuel</option>
         </select>
 
-        <input type="button" class="buttonVert droite" value="Suivant" onclick="creationSuivant(2)">
-        <input type="button" class="buttonVert gauche" value="Precedent" onclick="creationPrecedent(2)">
+        <input type="button" class="greenButton droite" value="Suivant" onclick="creationSuivant(2)">
+        <input type="button" class="greenButton gauche" value="Precedent" onclick="creationPrecedent(2)">
     </form>
 </div>
 
@@ -89,7 +89,7 @@ title: inscription
         <label for="adresseS">Adresse</label>
         <input type="text" class="saisie" id="adresseS" name="adresseS">
 
-        <input type="button" class="buttonVert droite" value="Terminer" onclick="">
-        <input type="button" class="buttonVert gauche" value="Precedent" onclick="creationPrecedent(3)">
+        <input type="button" class="greenButton droite" value="Terminer" onclick="">
+        <input type="button" class="greenButton gauche" value="Precedent" onclick="creationPrecedent(3)">
     </form>
 </div>
