--- a/site/content/lostpassword.html
+++ b/site/content/lostpassword.html
@@ -10,7 +10,6 @@ title: Mot de passe perdu
     <label for="email">Courriel </label>
     <input type="email" class="saisie" id="email" name="email">
 
-
-    <input type="button" class="buttonVert droite" value="Suivant" onclick="creationSuivant(1)">
+    <input type="button" class="greenButton droite" value="Suivant" onclick="creationSuivant(1)">
   </form>
 </div>
