--- a/site/content/inscription.html
+++ b/site/content/inscription.html
@@ -23,19 +23,19 @@ title: inscription
     <form>
 
         <label for="nom">Nom</label>
-        <input type="text" class="saisie" id="nom" name="nom">
+        <input type="text" class="inputType" id="nom" name="nom">
 
         <label for="prenom">Prénom</label>
-        <input type="text" class="saisie" id="prenom" name="prenom">
+        <input type="text" class="inputType" id="prenom" name="prenom">
 
         <label for="email">Courriel </label>
-        <input type="email" class="saisie" id="email" name="email">
+        <input type="email" class="inputType" id="email" name="email">
 
         <label for="motdepasse">Mot de passe</label>
-        <input type="password" class="saisie" id="motdepasse" name="motdepasse">
+        <input type="password" class="inputType" id="motdepasse" name="motdepasse">
 
         <label for="motdepasse">Confirmer le mot de passe</label>
-        <input type="password" class="saisie" id="motdepassebis" name="motdepassebis">
+        <input type="password" class="inputType" id="motdepassebis" name="motdepassebis">
 
         <input type="button" class="greenButton droite" value="Suivant" onclick="creationSuivant(1)">
     </form>
@@ -44,13 +44,13 @@ title: inscription
 <div id="creation_2" class="divDroite">
     <form>
         <label for="adresse">Adresse</label>
-        <input type="text" class="saisie" id="adresse" name="adresse">
+        <input type="text" class="inputType" id="adresse" name="adresse">
 
         <label for="annee">Année</label>
-        <input type="number" class="saisie" id="annee" name="annee">
+        <input type="number" class="inputType" id="annee" name="annee">
 
         <label for="chauffage">Chauffage </label>
-        <select id="chauffage" class="saisie" name="chauffage">
+        <select id="chauffage" class="inputType" name="chauffage">
             <option></option>
             <option>Gaz</option>
             <option>Fuel</option>
@@ -58,13 +58,13 @@ title: inscription
         </select>
 
         <label for="piece">Nombre de pièces</label>
-        <input type="number" class="saisie" id="piece" name="piece">
+        <input type="number" class="inputType" id="piece" name="piece">
 
         <label for="surface">Surface</label>
-        <input type="number" class="saisie" id="surface" name="surface">
+        <input type="number" class="inputType" id="surface" name="surface">
 
         <label for="type">Type de logement</label>
-        <select id="type" class="saisie" name="type">
+        <select id="type" class="inputType" name="type">
             <option></option>
             <option value="0">Collectif</option>
             <option value="1">Individuel</option>
@@ -78,16 +78,16 @@ title: inscription
 <div id="creation_3" class="divDroite">
     <form>
         <label for="nomP">Nom</label>
-        <input type="text" class="saisie" id="nomP" name="nomP">
+        <input type="text" class="inputType" id="nomP" name="nomP">
 
         <label for="prenomP">Prénom</label>
-        <input type="text" class="saisie" id="prenomP" name="prenomP">
+        <input type="text" class="inputType" id="prenomP" name="prenomP">
 
         <label for="societe">Société </label>
-        <input type="email" class="saisie" id="societe" name="societe">
+        <input type="email" class="inputType" id="societe" name="societe">
 
         <label for="adresseS">Adresse</label>
-        <input type="text" class="saisie" id="adresseS" name="adresseS">
+        <input type="text" class="inputType" id="adresseS" name="adresseS">
 
         <input type="button" class="greenButton droite" value="Terminer" onclick="">
         <input type="button" class="greenButton gauche" value="Precedent" onclick="creationPrecedent(3)">
