--- a/site/content/lostpassword.html
+++ b/site/content/lostpassword.html
@@ -7,8 +7,8 @@ title: Mot de passe perdu
   Afin de pouvoir vous envoyer un lien de récupération de votre compte, veuillez saisir les informations ci dessous.
   <br><br><form>
 
-    <label for="email">Courriel </label>
-    <input type="email" class="saisie" id="email" name="email">
+    <label for="email">Courriel</label>
+    <input type="email" class="inputType" id="email" name="email">
 
     <input type="button" class="greenButton droite" value="Suivant" onclick="creationSuivant(1)">
   </form>
