--- a/site/content/lostpassword.html
+++ b/site/content/lostpassword.html
@@ -10,6 +10,6 @@ title: Mot de passe perdu
     <label for="email">Courriel</label>
     <input type="email" class="inputType" id="email" name="email">
 
-    <input type="button" class="greenButton droite" value="Suivant" onclick="creationSuivant(1)">
+    <input type="button" class="gButton greenButton droite" value="Suivant" onclick="creationSuivant(1)">
   </form>
 </div>
