--- a/site/content/_index.html
+++ b/site/content/_index.html
@@ -8,22 +8,15 @@ alias:
 
 <div class="divMilieu">
     Pour acceder à votre compte, veuillez vous identifier.
-    <br />
+    <br>
     <form name="loginForm" id="loginForm" method="post" action="http://localhost:8080/j_security_check">
         <label for="inpLogin">Identifiant</label>
-        <input type="text" class="inputType" id="inpLogin" name="j_username" placeholder="Adresse email"
-            validationMessage="Votre identifiant est obligatoire"
-            valueMissing="Votre identifiant est obligatoire"
-            required data-msg-containerid="loginRequiredError">
-        <div id="loginRequiredError" class="inputError"></div>
+        <input type="text" class="inputType" id="inpLogin" name="j_username" placeholder="Saisir votre identifiant" required>
 
         <label for="inpPassword">Mot de passe</label>
-        <input type="password" class="inputType" id="inpPassword" name="j_password" placeholder="Mot de passe" required
-            data-msg-containerid="passRequiredError" data-required-message="Votre mot de passe est obligatoire"
-            data-value-missing="Votre mot de passe est obligatoire">
-        <div id="passRequiredError" class="inputError"></div>
+        <input type="password" class="inputType" id="inpPassword" name="j_password" placeholder="Saisir votre mot de passe" required>
 
         <a href="inscription">Créez un compte</a> - <a href="lostpassword">Mot de passe perdu</a>
-        <input type="button" class="greenButton droite" value="Se connecter" onclick="submitLogin()">
+        <input type="submit" class="gButton greenButton droite" value="Se connecter" onclick="submitLogin()">
     </form>
 </div>
