Started inscription submit

--- a/site/content/inscription.html
+++ b/site/content/inscription.html
@@ -122,7 +122,7 @@ title: inscription
             J'accepte
         </div>
         <div>
-            <input type="button" class="greenButton droite" value="S'enregistrer">
+            <input type="button" class="greenButton droite" value="S'enregistrer" onclick="submitSubscriptionForm()">
             <input type="button" class="greenButton gauche" value="Precedent"
                 onclick="slideSubscriptionPrevious(4, 'divDroite', 'divMilieu')">
         </div>
